--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "neutronium",
-  "version": "2.8.5",
+  "version": "2.8.7",
   "description": "A dense, efficient JavaScript framework for building modern web applications",
   "main": "src/index.js",
   "type": "commonjs",
-  "types": "./@types/neutronium/index.d.ts",
+  "types": "./ts-neutronium/index.d.ts",
   "scripts": {
     "build": "node build.js",
     "start": "npx serve dist"
@@ -18,6 +18,7 @@
   "keywords": [
     "framework",
     "javascript",
+    "typescript",
     "frontend",
     "ui",
     "components"
