git repo link add to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "neutronium",
-  "version": "2.9.8",
+  "version": "2.9.9",
   "description": "A dense, efficient JavaScript framework for building modern web applications",
   "main": "src/index.js",
   "type": "commonjs",
@@ -20,26 +20,25 @@
     "ui",
     "components"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pfm37/n.git"
+  },
   "author": "PFMCODES",
+  "bugs": {
+    "url": "https://github.com/pfm37/n/issues"
+  },
+  "homepage": "https://github.com/pfm37/n#readme",
   "license": "MIT",
   "dependencies": {
-    "@babel/cli": "^7.28.0",
     "@babel/core": "^7.28.0",
     "@babel/plugin-transform-react-jsx": "^7.27.1",
     "@babel/preset-env": "^7.28.0",
     "@babel/preset-react": "^7.27.1",
     "chokidar": "^4.0.3",
     "inquirer": "^12.7.0",
-    "jsdom": "^26.1.0",
     "mime": "^4.0.7",
     "open": "^10.2.0",
     "ws": "^8.18.3"
-  },
-  "devDependencies": {
-    "@rollup/plugin-babel": "^6.0.4",
-    "@rollup/plugin-node-resolve": "^16.0.1",
-    "esbuild": "^0.25.6",
-    "rollup": "^2.79.2",
-    "rollup-plugin-terser": "^7.0.2"
   }
 }
